--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   min-height: 100vh;
   color: white;
   font-family: 'ClashDisplay-Regular', sans-serif;
+  overflow-x: hidden;
 }
 
 @font-face {
